--- a/work.html
+++ b/work.html
@@ -96,7 +96,7 @@
                                 <p class="card-text">Volunteer hours working with the IT manager. Learning professional skills all while helping people!</p>
                                 <!-- <p class="small"><i>Collaborated with Evan Slater</i></p> -->
                                 <div class="cardButtons">
-                                    <a href="https://www.firstinspires.org/robotics/ftc" class="btn">Website</a>
+                                    <a href="https://atlantalegalaid.org/" class="btn">Website</a>
                                     <a href="../projects/legalaid.html" class="btn">More Info</a>
                                 </div>
                                 <div class="card-footer text-muted">
@@ -113,8 +113,8 @@
                                 <p class="card-text">4 years of building robots, programming, and learning professional skills.</p>
                                 <!-- <p class="small"><i>Collaborated with Evan Slater</i></p> -->
                                 <div class="cardButtons">
-                                    <a href="" class="btn">Website</a>
-                                    <a href="../projects/legalaid.html" class="btn">More Info</a>
+                                    <a href="https://www.firstinspires.org/robotics/ftc" class="btn">Website</a>
+                                    <a href="../projects/first.html" class="btn">More Info</a>
                                 </div>
                                 <div class="card-footer text-muted">
                                     <i>Summer 2016 - Fall 2020</i>
