--- a/work.html
+++ b/work.html
@@ -109,15 +109,17 @@
                         <div class="card" href="#">
                             <img class="card-img-top" src="assets/first.jpg" alt="Card image cap">
                             <div class="card-body">
-                                <h5 class="card-title">FIRST Competitive Robotics Team</h5>
-                                <p class="card-text">4 years of building robots, programming, and learning professional skills.</p>
+                                <h5 class="card-title">FIRST Robotics Code</h5>
+                                <p class="card-text">The culmination of 4 years of building robots, programming, and learning professional skills.</p>
                                 <!-- <p class="small"><i>Collaborated with Evan Slater</i></p> -->
                                 <div class="cardButtons">
+                                    
+                                    <a href="https://github.com/hverrill/FTC12961" class="btn">Source</a>
                                     <a href="https://www.firstinspires.org/robotics/ftc" class="btn">Website</a>
                                     <a href="../projects/first.html" class="btn">More Info</a>
                                 </div>
                                 <div class="card-footer text-muted">
-                                    <i>Summer 2016 - Fall 2020</i>
+                                    <i>Spring 2020 - Fall 2020</i>
                                 </div>
                             </div>
                         </div>
