--- a/projects/first.html
+++ b/projects/first.html
@@ -34,16 +34,19 @@
             <!-- The about me. This talks a bit more about myself. -->
             <div id="abstract" class="medium primary">
                 <p>
-                    Throughout high school, I was a member of 3 different FIRST robotics teams. Though FIRST is a high school extracurricular, it is responsible for many of the engineering and professional communication skills I know today.  I was the founder and co-captain of a FIRST FTC team and the lead programmer on each team. Successful FTC teams are run like a small business, with their own budget, business plan, and marketing and outreach plan. The team creates documentation on product development and presents its work to a panel of judges. The robot is only a small part of the challenge.
+                    Throughout all of high school, I was a member of 3 different FIRST robotics teams. Though FIRST is a high school extracurricular, it is responsible for many of the engineering and professional communication skills I know today.  I was the founder and co-captain of a FIRST FTC team and the lead programmer on each team. Successful FTC teams are run like a small business, with their own budget, business plan, and marketing and outreach plan. The team creates documentation on product development and presents its work to a panel of judges. The robot is only a small part of the challenge.
                 </p>
                 <p>
-                    My FTC team won the state Think Award, for excellence in documenting our engineering process. We also won awards for design and innovation. My FTC team advanced to the world championship in 2020, but it was cancelled due to COVID-19.
+                    Over the 2020 season, I programmed the robot as part of my role on the team. It used the onboard accelerometers and gyroscope to orient itself on the playfield. For other gameplay elements, it used TensorFlow visual processing to recognise items on the field. 
+                </p>
+                <p>
+                    At the end of the 2020 season, my FTC team won the state Think Award for excellence in documenting our engineering process. We also won awards for design and innovation. My FTC team advanced to the world championship in 2020 through this award, but it was cancelled due to COVID-19.
                 </p>
                 <p>
                     Over my years in FIRST, I learned many professional communication and engineering skills that I implement to this day. As the programmer for every team I was on, I learned how to use online code documentation, as well as how to use Git and Github. We routinely met with professionals to learn about their careers, as well as for assistance with our robot.
                 </p>
                 <p>
-                    FIRST is one of the reasons I’m an engineer today. I wouldn’t be where I am today without the years of grueling work and opportunities FIRST provided me with. I learned how to talk in front of committees, create technical documentation, write meeting minutes, technically collaborate with others, as well as programming and engineering skills. 
+                    FIRST is one of the reasons I’m an engineer today. I wouldn’t be where I am today without the years of grueling work and opportunities FIRST provided me with. I learned how to talk in front of committees, create technical documentation, write meeting minutes, technically collaborate with others, on top of the programming and engineering skills. 
                 </p>
             </div>
             <!-- Link to the resume page. May relocate. -->
