--- a/projects/calendar.html
+++ b/projects/calendar.html
@@ -27,24 +27,26 @@
             <!-- The introduction. Says my name and a short one-liner -->
             <div id="title" class="header primary">
                 <p> 
-                    FIRST Robotics
+                    Group Study Planner
                 </p>
+                <p>
+                    For this project, me and my partner Evan Slater worked together to create a working web application. Our goal was to learn about web development and create the final product over the 10 weeks of the quarter, implementing features and foundations as we went along. We decided to make a weekly group scheduler, called Group Study Planner. It would allow users to make a study group. The app would calculate the best times for the group to meet based on each user’s schedule. 
+                </p>
+                <p>
+                    Throughout the design process, we had lots of ideas initially. It was hard to both learn the skills to build the app and also plan for future development. We met every week to discuss design and collaborate on the website.
+                </p>
+                <p>
+                    The app was built using Bootstrap MD and flexbox, and was hosted on Google’s hosting service Firebase. The web app featured a profile with contact information and a visual weekly schedule. Users could create a group, and invite fellow students. After creating a group, users could see the groups calculated availability, the group events, and the group members. Users could create events, with a weekly date, time, and location. 
+                </p>
+                <p>
+                    This project allowed me to stretch my limits of web development, and allowed me to create the website you are viewing this on from scratch. It gave me a chance to dip my toes into web development while allowing me to work as a team.
+                </p>
+
             </div>
-            <img class="image" src="../assets/first.jpg" alt="">
+            <img class="image" src="../assets/groupcalendar.png" alt="">
             <!-- The about me. This talks a bit more about myself. -->
             <div id="abstract" class="medium primary">
-                <p>
-                    For this project, I collaborated with a team of other students to make a pathfinding application from scratch. The goal was to use one of two graph-based pathfinding algorithms and create a map navigation tool.
-                </p>
-                <p>
-                    Over the course of three weeks, me and the ironically named “Team Flat Earth”: Jaden Rigg and Nathan Loafman, worked together to create an application that would find the best flight path to and from any major airport in the world. As this application was made during the pandemic, we met for team meetings virtually most of the time. As a team, we were responsible for keeping track of meeting minutes, member responsibilities, a final presentation showing off our application, and creating the application in Java from scratch.
-                </p>
-                <p>
-                    We had many design and logistical problems. One of our original team members didn’t end up contributing, and we had to redistribute the workload. We had problems with making sure every team member was working with the same version of code.
-                </p>
-                <p>
-                    Technically, the application uses Dijkstra's algorithm to find the best route between airport locations. We used an XML document with a list of all major airports and their locations. The distance between each airport is calculated spherically, but the locations are displayed on a flat map. The application can calculate the total distance traveled and time traveled for any two locations. 
-                </p>
+                
             </div>
             <!-- Link to the resume page. May relocate. -->
             <!-- <div id="resume" class="big primary">
