--- a/work.html
+++ b/work.html
@@ -66,7 +66,7 @@
                                     <a href="../projects/webinar.html" class="btn">More Info</a>
                                 </div>
                                 <div class="card-footer text-muted">
-                                    <i>May 22nd, 2021</i>
+                                    <i>August 8th, 2021</i>
                                 </div>
                             </div>
                         </div>
