--- a/projects/legalaid.html
+++ b/projects/legalaid.html
@@ -29,6 +29,9 @@
                 <p> 
                     Atlanta Legal Aid Society
                 </p>
+                <p>
+                    Atlanta Legal Aid Society is a non-profit law firm based in Atlanta, GA. They provide free legal services for poor and disadvantaged people with problems like domestic abuse and eviction, among other legal issues. In high school, I volunteered to help the IT manager over the course of the summer. It was my first experience in a professional workplace environment, and I learned a lot about how to act professional, in addition to the technical knowledge I learned firsthand. As an even better bonus, I got to indirectly help people in my community who needed it.
+                </p>
             </div>
             <img class="image" src="../assets/atlantalegalaid.jpg" alt="">
             <!-- The about me. This talks a bit more about myself. -->
