--- a/projects/legalaid.html
+++ b/projects/legalaid.html
@@ -29,16 +29,20 @@
                 <p> 
                     Atlanta Legal Aid Society
                 </p>
-                <p>
-                    Atlanta Legal Aid Society is a non-profit law firm based in Atlanta, GA. They provide free legal services for poor and disadvantaged people with problems like domestic abuse and eviction, among other legal issues. In high school, I volunteered to help the IT manager over the course of the summer. It was my first experience in a professional workplace environment, and I learned a lot about how to act professional, in addition to the technical knowledge I learned firsthand. As an even better bonus, I got to indirectly help people in my community who needed it.
-                </p>
             </div>
             <img class="image" src="../assets/atlantalegalaid.jpg" alt="">
             <!-- The about me. This talks a bit more about myself. -->
             <div id="abstract" class="medium primary">
                 <p>
-                
+                    I spent 3 months volunteering with Atlanta Legal Aid’s IT Manager during the summer of 2019. Atlanta Legal Aid is a non-profit law firm based in Atlanta, Georgia with a staff of 175, serving over 20,000 clients each year. Legal Aid provides free legal services for poor and disadvantaged people with problems like domestic abuse and eviction, among other legal issues. 
                 </p>
+                <p>
+                    As my first experience in a professional workplace environment, I learned a lot about how to patiently support end-users who were more focused on their legal work than learning the technology they need to use. I also acquired technical skills for managing networks and work stations in a medium-sized law firm, with a focus on customer support and security.
+                </p>
+                <p>
+                    During my time at the law firm, I helped the IT Manager purchase hardware, install desktop computers, do remote maintenance, and maintain server racks. I got to know the employees and how to fulfill their needs. We routinely drove to different locations and computer part warehouses in order to fix machines in need. This was my first experience using my technical skills to indirectly help people in my community. It was a great experience working in a professional environment with such amazing people, even if their computers were out of date, poorly maintained, and sometimes simply unplugged. 
+                </p>
+
             </div>
             <!-- Link to the resume page. May relocate. -->
             <!-- <div id="resume" class="big primary">
