--- a/homepage.html
+++ b/homepage.html
@@ -15,23 +15,31 @@
         <link rel="icon" href="assets/favicon.png">
     </head>
     <body class="body">
-        <main class="main" id="top">
-            <h2><a href="https://hverrill.github.io/">Home</a></h2>
-            <div class="card big" href="#">
-                <div class="card-body">
-                    <h5 class="card-title">Homepage - Common Links</h5>
-                    <p class="card-text">
-                        <div><a href="https://roamresearch.com/#/app/edgeofthevoid/">Roam Research</a></div>
-                        <div><a href="https://rosehulman.sharepoint.com/sites/myrh">My Rose Hulman</a></div>
-                        <div><a href="https://moodle.rose-hulman.edu/login/index.php">Moodle</a></div>
-                        <div><a href="https://login.pearson.com/v1/piapi/piui/signin?client_id=dN4bOBG0sGO9c9HADrifwQeqma5vjREy&okurl=https:%2F%2Fportal.mypearson.com%2Fcourse-home&siteid=8313">Pearson</a></div>
-                        <div><a href="https://mail.google.com/mail/u/0/#inbox">Gmail</a></div>
-                        <div><a href="https://beta.protonmail.com/u/0/inbox">Protonmail</a></div>
-                    </p>
-                </div>
+        <header>
+            <div class="bar">
+                <a href="\" class="btn">Home</a>
+                <a href="\work.html" class="btn">My Work</a>
+                <a href="\about.html" class="btn">About Me</a>
+                <a href="\contact.html" class="btn">Contact</a>
             </div>
-            <h1></h1>
-           
+        </header>
+        <main class="main" id="top">
+            <div class="large header primary">
+                <p>
+                    <a class="link" href="https://roamresearch.com/#/app/edgeofthevoid/">Roam Research</a>
+                </p>
+                <p>
+                    <a class="link" href="https://rosehulman.sharepoint.com/sites/myrh">My Rose Hulman</a>
+                </p>
+                <p>
+                    <a class="link" href="https://moodle.rose-hulman.edu/login/index.php">Moodle</a>
+                </p>
+                <p>
+                    <a class="link" href="https://login.pearson.com/v1/piapi/piui/signin?client_id=dN4bOBG0sGO9c9HADrifwQeqma5vjREy&okurl=https:%2F%2Fportal.mypearson.com%2Fcourse-home&siteid=8313">Pearson</a>
+                </p>
+                <p>
+                    <a class="link" href="https://beta.protonmail.com/u/0/inbox">Protonmail</a>
+                </p>
         </main>
         <div class="bg"></div>
         <div class="bottomBar"></div>
