changed homepage links

--- a/homepage.html
+++ b/homepage.html
@@ -26,7 +26,7 @@
         <main class="main" id="top">
             <div class="large header primary">
                 <p>
-                    <a class="link" href="https://roamresearch.com/#/app/edgeofthevoid/">Roam Research</a>
+                    <a class="link" href="https://rosehulman.campusgroups.com/login_only">Campus Groups</a>
                 </p>
                 <p>
                     <a class="link" href="https://rosehulman.sharepoint.com/sites/myrh">My Rose Hulman</a>
@@ -38,7 +38,7 @@
                     <a class="link" href="https://login.pearson.com/v1/piapi/piui/signin?client_id=dN4bOBG0sGO9c9HADrifwQeqma5vjREy&okurl=https:%2F%2Fportal.mypearson.com%2Fcourse-home&siteid=8313">Pearson</a>
                 </p>
                 <p>
-                    <a class="link" href="https://beta.protonmail.com/u/0/inbox">Protonmail</a>
+                    <a class="link" href="https://mail.protonmail.com/u/0/inbox">Protonmail</a>
                 </p>
         </main>
         <div class="bg"></div>
