added marked and DOM purify for blog section

--- a/about.html
+++ b/about.html
@@ -20,6 +20,7 @@
                 <a href="\" class="btn">Home</a>
                 <a href="\work.html" class="btn">My Work</a>
                 <a href="\about.html" class="btn">About Me</a>
+                <a href="\blog.html" class="btn">Blog</a>
                 <a href="\contact.html" class="btn">Contact</a>
             </div>
         </header>
