--- a/blog.html
+++ b/blog.html
@@ -53,6 +53,7 @@
         <div class="bottomBar"></div>
     </body>
     <script src="https://cdn.jsdelivr.net/npm/marked/marked.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/BrowserFS/2.0.0/browserfs.min.js" integrity="sha512-mz0EI+Ay1uIJP7rZEX8C/JlTAcHRIQ8Sny4vxmmj8MSzDJgG9NxxY2pUmOGv1lO7imFIFMyjjCzEXEywNgaUdQ==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
     <script src="scripts/bootstrap-material-design.js"></script>
     <script src="scripts/main.js"></script>
     
