--- a/homepage.html
+++ b/homepage.html
@@ -45,7 +45,7 @@
                     <a class="link" href="https://mail.protonmail.com/u/0/inbox">Protonmail</a>
                 </p>
                 <p>
-                    <a class="link" href="https://learn.zybooks.com/zybook/ROSEHULMANCSSE280Winter2022/">ZyBooks</a>
+                    <a class="link" href="https://www.gradescope.com/">GradeScope</a>
                 </p>
         </main>
         <div class="bg"></div>
