--- a/homepage.html
+++ b/homepage.html
@@ -27,25 +27,25 @@
         <main class="main" id="top">
             <div class="large header primary">
                 <p>
-                    <a class="link" href="https://rosehulman.campusgroups.com/login_only">Campus Groups</a>
+                    <a class="link" href="https://rosehulman.campusgroups.com/login_only">🤝 Campus Groups</a>
                 </p>
                 <p>
-                    <a class="link" href="https://rosehulman.sharepoint.com/sites/myrh">My Rose Hulman</a>
+                    <a class="link" href="https://rosehulman.sharepoint.com/sites/myrh">🏠 My Rose Hulman</a>
                 </p>
                 <p>
-                    <a class="link" href="https://learn.zybooks.com/zybook/ROSEHULMANCSSE280Winter2022">ZyBooks</a>
+                    <a class="link" href="https://learn.zybooks.com/zybook/ROSEHULMANCSSE280Winter2022">📚 ZyBooks</a>
                 </p>
                 <p>
-                    <a class="link" href="https://moodle.rose-hulman.edu/login/index.php">Moodle</a>
+                    <a class="link" href="https://moodle.rose-hulman.edu/login/index.php">🎓 Moodle</a>
                 </p>
-                <p>
+                <!-- <p>
                     <a class="link" href="https://login.pearson.com/v1/piapi/piui/signin?client_id=dN4bOBG0sGO9c9HADrifwQeqma5vjREy&okurl=https:%2F%2Fportal.mypearson.com%2Fcourse-home&siteid=8313">Pearson</a>
+                </p> -->
+                <p>
+                    <a class="link" href="https://mail.protonmail.com/u/0/inbox">📧 Protonmail</a>
                 </p>
                 <p>
-                    <a class="link" href="https://mail.protonmail.com/u/0/inbox">Protonmail</a>
-                </p>
-                <p>
-                    <a class="link" href="https://www.gradescope.com/">GradeScope</a>
+                    <a class="link" href="https://www.gradescope.com/">📃 GradeScope</a>
                 </p>
         </main>
         <div class="bg"></div>
