Add team project vault link to homepage

--- a/homepage.html
+++ b/homepage.html
@@ -42,6 +42,9 @@
                     <a class="link" href="https://login.pearson.com/v1/piapi/piui/signin?client_id=dN4bOBG0sGO9c9HADrifwQeqma5vjREy&okurl=https:%2F%2Fportal.mypearson.com%2Fcourse-home&siteid=8313">Pearson</a>
                 </p> -->
                 <p>
+                    <a class="link" href="https://rosehulmanprojectvault.org/project/-MqFP2ilSOclYyzZEGUx">🔐 Team Project Vault</a>
+                </p>
+                <p>
                     <a class="link" href="https://mail.protonmail.com/u/0/inbox">📧 Protonmail</a>
                 </p>
                 <p>
