--- a/blog.html
+++ b/blog.html
@@ -31,9 +31,8 @@
             </div>
         </main>
 
-        <footer>
-            <div class="footer">
-                <!-- <div class="footContent" id="contact">
+        <footer class="footer">
+            <!-- <div class="footContent" id="contact">
                     <p class="big"> Contact Me:</p>
                     <div id="contact" class="small primary">
                         Cell: <b>(678)-994-9460</b> <br>
@@ -43,14 +42,14 @@
                         5500 Wabash Avenue CM 2008 <br>
                         Terre Haute, Indiana 47803 <br>
                     </div>
-                </div> -->
-                <div class="footContent">
-                    <p class="small">Copyright Henry Verrill</p>
-                </div>
+            </div> -->
+            <div class="footContent">
+                <p class="small">Copyright Henry Verrill</p>
             </div>
         </footer>
-        <div class="bg"></div>
         <div class="bottomBar"></div>
+        <div class="bg"></div>
+        
     </body>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/markdown-it/12.2.0/markdown-it.min.js" integrity="sha512-cTQeM/op796Fp1ZUxfech8gSMLT/HvrXMkRGdGZGQnbwuq/obG0UtcL04eByVa99qJik7WlnlQOr5/Fw5B36aw==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/marked/3.0.8/marked.min.js" integrity="sha512-OA0KzIFyfjEiECfdTeeqyDa++XmSLWyIBr8bWf2lpdv3qNr2TxpR9uaL2fKaz/Nz35kVVPEagjhWdWat/khWXw==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
