updated homepage for new quarter

--- a/homepage.html
+++ b/homepage.html
@@ -32,20 +32,30 @@
                 <p>
                     <a class="link" href="https://rosehulman.sharepoint.com/sites/myrh">🏠 My Rose Hulman</a>
                 </p>
-                <p>
+                <!-- <p>
                     <a class="link" href="https://learn.zybooks.com/zybook/ROSEHULMANCSSE280Winter2022">📚 ZyBooks</a>
+                </p> -->
+                <p>
+                    <a class="link" href="https://www.rose-hulman.edu/class/csse/csse132/2122c/schedule.html">📅 CSSE132 Schedule</a>
                 </p>
                 <p>
                     <a class="link" href="https://moodle.rose-hulman.edu/login/index.php">🎓 Moodle</a>
                 </p>
+                <p>
+                    <a class="link" href="https://bannerweb.rose-hulman.edu/login">🖥 BannerWeb</a>
+                </p>
+                
                 <!-- <p>
                     <a class="link" href="https://login.pearson.com/v1/piapi/piui/signin?client_id=dN4bOBG0sGO9c9HADrifwQeqma5vjREy&okurl=https:%2F%2Fportal.mypearson.com%2Fcourse-home&siteid=8313">Pearson</a>
                 </p> -->
-                <p>
+                <!-- <p>
                     <a class="link" href="https://rosehulmanprojectvault.org/project/-MqFP2ilSOclYyzZEGUx">🔐 Team Project Vault</a>
+                </p> -->
+                <p>
+                    <a class="link" href="https://mail.protonmail.com/">📧 Protonmail</a>
                 </p>
                 <p>
-                    <a class="link" href="https://mail.protonmail.com/u/0/inbox">📧 Protonmail</a>
+                    <a class="link" href="https://outlook.office365.com/mail/inbox/">📬 Outlook</a>
                 </p>
                 <p>
                     <a class="link" href="https://www.gradescope.com/">📃 GradeScope</a>
