--- a/homepage.html
+++ b/homepage.html
@@ -48,9 +48,9 @@
                 <!-- <p>
                     <a class="link" href="https://login.pearson.com/v1/piapi/piui/signin?client_id=dN4bOBG0sGO9c9HADrifwQeqma5vjREy&okurl=https:%2F%2Fportal.mypearson.com%2Fcourse-home&siteid=8313">Pearson</a>
                 </p> -->
-                <!-- <p>
-                    <a class="link" href="https://rosehulmanprojectvault.org/project/-MqFP2ilSOclYyzZEGUx">🔐 Team Project Vault</a>
-                </p> -->
+                <p>
+                    <a class="link" href="https://docs.google.com/document/d/197pJpCjDXQpzb3eGgwdQTJ4OoYdbkKN2N_lqAuO-iYk/edit">📄 Schedule and Planning</a>
+                </p>
                 <p>
                     <a class="link" href="https://mail.protonmail.com/">📧 Protonmail</a>
                 </p>
