change banner icon

--- a/homepage.html
+++ b/homepage.html
@@ -42,7 +42,7 @@
                     <a class="link" href="https://moodle.rose-hulman.edu/login/index.php">🎓 Moodle</a>
                 </p>
                 <p>
-                    <a class="link" href="https://bannerweb.rose-hulman.edu/login">🖥 BannerWeb</a>
+                    <a class="link" href="https://bannerweb.rose-hulman.edu/login">💾 BannerWeb</a>
                 </p>
                 
                 <!-- <p>
