updated for recent application

--- a/projects/airports.html
+++ b/projects/airports.html
@@ -31,7 +31,6 @@
                 </p>
             </div>
             <img class="image" src="../assets/teamflatearth.png" alt="">
-            <!-- The about me. This talks a bit more about myself. -->
             <div id="abstract" class="medium primary">
                 <p>
                     For this project, I collaborated with a team of other students to make a pathfinding application from scratch. The goal was to use one of two graph-based pathfinding algorithms and create a map navigation tool.
@@ -46,31 +45,14 @@
                     Technically, the application uses Dijkstra's algorithm to find the best route between airport locations. We used an XML document with a list of all major airports and their locations. The distance between each airport is calculated spherically, but the locations are displayed on a flat map. The application can calculate the total distance traveled and time traveled for any two locations. 
                 </p>
             </div>
-            <!-- Link to the resume page. May relocate. -->
-            <!-- <div id="resume" class="big primary">
-                <p>Interested in my stats? Click <a class="link" href="assets/resume_color.pdf">here</a> to view my resume.</p>
-            </div> -->
         </main>
-        <footer>
-            <div class="footer">
-                <!-- <div class="footContent" id="contact">
-                    <p class="big"> Contact Me:</p>
-                    <div id="contact" class="small primary">
-                        Cell: <b>(678)-994-9460</b> <br>
-                        School Email: <a class="link" href="mailto:verrilhn&#64rose-hulman.edu">verrilhn (at) rose-hulman.edu</a><br>
-                        Personal Email: <a  class="link" href="mailto:hverrill&#64protonmail.com">hverrill (at) protonmail.com</a><br> 
-                        Address: <br>
-                        5500 Wabash Avenue CM 2008 <br>
-                        Terre Haute, Indiana 47803 <br>
-                    </div>
-                </div> -->
-                <div class="footContent">
-                    <p class="small">Copyright Henry Verrill</p>
-                </div>
+        <footer class="footer">
+            <div class="footContent">
+                <p class="small">Copyright Henry Verrill</p>
             </div>
         </footer>
-        <div class="bg"></div>
         <div class="bottomBar"></div>
+        <div class="bg"></div>
     </body>
     <script src="../scripts/bootstrap-material-design.js"></script>
     <script src="../scripts/main.js"></script>
