--- a/blog.html
+++ b/blog.html
@@ -20,14 +20,14 @@
                 <a href="\" class="btn">Home</a>
                 <a href="\work.html" class="btn">My Work</a>
                 <a href="\about.html" class="btn">About Me</a>
-                <a href="\blog.html" class="btn">Blog</a>
+                <!-- <a href="\blog.html" class="btn">Blog</a> -->
                 <a href="\contact.html" class="btn">Contact</a>
             </div>
         </header>
         <main class="main" id="top">
             
             <div id="mdcontent">
-
+                Nothing here. I warned you! :)
             </div>
         </main>
 
