--- a/about.html
+++ b/about.html
@@ -37,7 +37,7 @@
                 <p>
                     <a class="link" href="https://www.rose-hulman.edu/">Rose-Hulman Institute of Technology</a> <br>
                     B.S. Engineering Design (previously Software Engineering) <br>
-                    Class of 2024
+                    Class of 2024 <br>
                     <i> I plan to take classes at <a class="link" href="https://www.kennesaw.edu/">Kennesaw State University</a> come fall this year due to health reasons, and then go back to Rose-Hulman to finish my degree.</i>
                 </p>
                 <p>
