update for new semester

--- a/homepage.html
+++ b/homepage.html
@@ -27,39 +27,63 @@
         <main class="main" id="top">
             <div class="large header primary">
                 <p>
+                    <a class="link" href="https://catalog.kennesaw.edu/content.php?catoid=27&navoid=2254">🏠 All KSU Links</a>
+                </p>
+                <p>
+                    <a class="link" href="https://kennesaw.view.usg.edu/">🎓 D2L Brightspace</a>
+                </p>
+                <p>
+                    <a class="link" href="owlexpress.kennesaw.edu">🖥 OwlExpress</a>
+                </p>
+                <p>
+                    <a class="link" href="https://mail.proton.me/">📧 Protonmail</a>
+                </p>
+                <p>
+                    <a class="link" href="https://bannerweb.rose-hulman.edu/login">💾 BannerWeb</a>
+                </p>
+
+                <p>
+                    <a class="link" href="https://outlook.office365.com/">📬 Outlook</a>
+                </p>
+                <p>
+                    <a class="link" href="https://app.netdata.cloud/">📊 NetData Monitor</a>
+                </p>
+                <p><h2 class="header big">Depricated</h2></p>
+                <p>
                     <a class="link" href="https://rosehulman.campusgroups.com/login_only">🤝 Campus Groups</a>
                 </p>
                 <p>
                     <a class="link" href="https://rosehulman.sharepoint.com/sites/myrh">🏠 My Rose Hulman</a>
                 </p>
-                <!-- <p>
-                    <a class="link" href="https://learn.zybooks.com/zybook/ROSEHULMANCSSE280Winter2022">📚 ZyBooks</a>
-                </p> -->
                 <p>
-                    <a class="link" href="https://www.rose-hulman.edu/class/csse/csse132/2122c/schedule.html">📅 CSSE132 Schedule</a>
-                </p>
-                <p>
-                    <a class="link" href="https://moodle.rose-hulman.edu/login/index.php">🎓 Moodle</a>
-                </p>
-                <p>
-                    <a class="link" href="https://bannerweb.rose-hulman.edu/login">💾 BannerWeb</a>
-                </p>
-                
-                <!-- <p>
-                    <a class="link" href="https://login.pearson.com/v1/piapi/piui/signin?client_id=dN4bOBG0sGO9c9HADrifwQeqma5vjREy&okurl=https:%2F%2Fportal.mypearson.com%2Fcourse-home&siteid=8313">Pearson</a>
-                </p> -->
-                <p>
-                    <a class="link" href="https://docs.google.com/document/d/197pJpCjDXQpzb3eGgwdQTJ4OoYdbkKN2N_lqAuO-iYk/edit">📄 Schedule and Planning</a>
-                </p>
-                <p>
-                    <a class="link" href="https://mail.protonmail.com/">📧 Protonmail</a>
-                </p>
-                <p>
-                    <a class="link" href="https://outlook.office365.com/mail/inbox/">📬 Outlook</a>
+                    <a class="link" href="https://bannerweb.rose-hulman.edu/login">🖥 BannerWeb</a>
                 </p>
                 <p>
                     <a class="link" href="https://www.gradescope.com/">📃 GradeScope</a>
                 </p>
+                <p>
+                    <a class="link" href="https://moodle.rose-hulman.edu/login/index.php">🎓 Moodle</a>
+                </p>
+                            
+                <!-- <p>
+                    <a class="link" href="https://login.pearson.com/v1/piapi/piui/signin?client_id=dN4bOBG0sGO9c9HADrifwQeqma5vjREy&okurl=https:%2F%2Fportal.mypearson.com%2Fcourse-home&siteid=8313">Pearson</a>
+                </p> -->
+                <!-- <p>
+                    <a class="link" href="https://docs.google.com/document/d/197pJpCjDXQpzb3eGgwdQTJ4OoYdbkKN2N_lqAuO-iYk/edit">📄 Schedule and Planning</a>
+                </p> -->
+
+                 <!-- <p>
+                    <a class="link" href="https://login.pearson.com/v1/piapi/piui/signin?client_id=dN4bOBG0sGO9c9HADrifwQeqma5vjREy&okurl=https:%2F%2Fportal.mypearson.com%2Fcourse-home&siteid=8313">Pearson</a>
+                </p> -->
+                <!-- <p>
+                    <a class="link" href="https://rosehulmanprojectvault.org/project/-MqFP2ilSOclYyzZEGUx">🔐 Team Project Vault</a>
+                </p> -->
+                <!-- <p>
+                    <a class="link" href="https://learn.zybooks.com/zybook/ROSEHULMANCSSE280Winter2022">📚 ZyBooks</a>
+                </p> -->
+                <!-- <p>
+                    <a class="link" href="https://www.rose-hulman.edu/class/csse/csse132/2122c/schedule.html">📅 CSSE132 Schedule</a>
+                </p> -->
         </main>
         <div class="bg"></div>
         <div class="bottomBar"></div>
