minor update in preparation for IAD3000 portfolio

--- a/contact.html
+++ b/contact.html
@@ -20,7 +20,7 @@
                 <a href="\" class="btn">Home</a>
                 <a href="\work.html" class="btn">My Work</a>
                 <a href="\about.html" class="btn">About Me</a>
-                <a href="\blog.html" class="btn">Blog</a>
+                <!-- <a href="\blog.html" class="btn">Blog</a> Don't visit this, nothing there -->
                 <a href="\contact.html" class="btn">Contact</a>
             </div>
         </header>
@@ -40,11 +40,9 @@
                 </p>
                 <p>
                     Cell: <b>(678)-994-9460</b> <br>
-                        School Email: <a class="link" href="mailto:verrilhn&#64rose-hulman.edu">verrilhn (at) rose-hulman.edu</a><br>
-                        Personal Email: <a  class="link" href="mailto:hverrill&#64protonmail.com">hverrill (at) protonmail.com</a><br> 
-                        Address: <br>
-                        5500 Wabash Avenue CM 2008 <br>
-                        Terre Haute, Indiana 47803 <br>
+                    School Email: <a class="link" href="mailto:hverrill&#64students.kennesaw.edu">hverrill (at) students.kennesaw.edu</a><br>
+                    Personal Email: <a  class="link" href="mailto:hverrill&#64protonmail.com">hverrill (at) protonmail.com</a><br> 
+                    Old School Email: <a class="link" href="mailto:verrilhn&#64rose-hulman.edu">verrilhn (at) rose-hulman.edu</a><br>
                 </p>
                 <p>
                     My resume is located on the "About Me" page. 
