--- a/index.html
+++ b/index.html
@@ -31,19 +31,18 @@
                 <p> 
                     Welcome, traveler! 👋<br>
                     My name is Henry Verrill. 
-                      
                 </p>
             </div>
             <!-- The about me. This talks a bit more about myself. -->
             <div id="aboutMe" class="medium primary">
                 <p>
-                    I'm a rising junior majoring in Engineering Design (previously Software Engineering) at Rose-Hulman Institute of Technology.
+                    I'm a junior majoring in Interactive Design (<i>Software Engineering at Rose-Hulman Institute of Technology</i>) at Kennesaw State University.
                 </p>
                 <p>
                     My goal is to make a positive impact on the world. I'm interested in a lot of diverse topics, including economics, philosophy, behavioral psychology, and technology.
                 </p>
                 <p>
-                    As I grow as a professional, I hope to combine software with my love of economics and human behavior. I want to create products that enhance the human condition and improve life on earth, instead of treating users like numbers. As I continue my education, I want to work for companies that care about improving life for people on earth.
+                    As I grow as a professional, I hope to combine software with my love of philosophy, human behavior, and art. I want to create products that enhance the human condition and improve life on earth, instead of treating users like numbers. As I continue my education, I want to work for companies that care about improving life for people on earth.
                 </p>
                 <p>
                     You can view the projects and work I've done on the <a class="link" href="\work.html">My Work</a> page. You can also find my resume on the <a class="link" href="\about.html">About Me</a> page.
