--- a/homepage.html
+++ b/homepage.html
@@ -33,13 +33,10 @@
                     <a class="link" href="https://kennesaw.view.usg.edu/">🎓 D2L Brightspace</a>
                 </p>
                 <p>
-                    <a class="link" href="owlexpress.kennesaw.edu">🖥 OwlExpress</a>
+                    <a class="link" href="https://owlexpress.kennesaw.edu">🖥 OwlExpress</a>
                 </p>
                 <p>
                     <a class="link" href="https://mail.proton.me/">📧 Protonmail</a>
-                </p>
-                <p>
-                    <a class="link" href="https://bannerweb.rose-hulman.edu/login">💾 BannerWeb</a>
                 </p>
                 <p>
                     <a class="link" href="https://outlook.office365.com/">📬 Outlook</a>
@@ -47,7 +44,7 @@
                 <p>
                     <a class="link" href="https://app.netdata.cloud/">📊 NetData Monitor</a>
                 </p>
-                <p><h2 class="header big">Depricated</h2></p>
+                <!-- <p><h2 class="header big">Depricated</h2></p>
                 <p>
                     <a class="link" href="https://rosehulman.campusgroups.com/login_only">🤝 Campus Groups</a>
                 </p>
@@ -63,6 +60,9 @@
                 <p>
                     <a class="link" href="https://moodle.rose-hulman.edu/login/index.php">🎓 Moodle</a>
                 </p>
+                <p>
+                    <a class="link" href="https://bannerweb.rose-hulman.edu/login">💾 BannerWeb</a>
+                </p> -->
                             
                 <!-- <p>
                     <a class="link" href="https://login.pearson.com/v1/piapi/piui/signin?client_id=dN4bOBG0sGO9c9HADrifwQeqma5vjREy&okurl=https:%2F%2Fportal.mypearson.com%2Fcourse-home&siteid=8313">Pearson</a>
