--- a/contact.html
+++ b/contact.html
@@ -51,27 +51,13 @@
             
             
         </main>
-
-        <footer>
-            <div class="footer">
-                <!-- <div class="footContent" id="contact">
-                    <p class="big"> Contact Me:</p>
-                    <div id="contact" class="small primary">
-                        Cell: <b>(678)-994-9460</b> <br>
-                        School Email: <a class="link" href="mailto:verrilhn&#64rose-hulman.edu">verrilhn (at) rose-hulman.edu</a><br>
-                        Personal Email: <a  class="link" href="mailto:hverrill&#64protonmail.com">hverrill (at) protonmail.com</a><br> 
-                        Address: <br>
-                        5500 Wabash Avenue CM 2008 <br>
-                        Terre Haute, Indiana 47803 <br>
-                    </div>
-                </div> -->
-                <div class="footContent">
-                    <p class="small">Copyright Henry Verrill</p>
-                </div>
+        <footer class="footer">
+            <div class="footContent">
+                <p class="small">Copyright Henry Verrill</p>
             </div>
         </footer>
-        <div class="bg"></div>
         <div class="bottomBar"></div>
+        <div class="bg"></div>
     </body>
     <script src="scripts/bootstrap-material-design.js"></script>
     <script src="scripts/main.js"></script>
