--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
             <!-- The about me. This talks a bit more about myself. -->
             <div id="aboutMe" class="medium primary">
                 <p>
-                    I'm a junior majoring in Interactive Design (<i>previously Software Engineering at Rose-Hulman Institute of Technology</i>) at Kennesaw State University.
+                    I'm a junior majoring in Interactive Design at Kennesaw State University. I previously majored in Software Engineering at Rose-Hulman Institute of Technology, but had to transfer closer to home due to health issues.
                 </p>
                 <p>
                     My goal is to make a positive impact on the world. I'm interested in a lot of diverse topics, including economics, philosophy, behavioral psychology, and technology.
