--- a/work.html
+++ b/work.html
@@ -33,6 +33,23 @@
                 <div class="big" id="projectCardList">
                     <div class="projectCard">
                         <div class="card" href="#">
+                            <img class="card-img-top" src="assets/booktunes.png" alt="Card image cap">
+                            <div class="card-body">
+                                <h5 class="card-title">Booktunes App Prototype</h5>
+                                <p class="card-text">A Figma-based prototype of a music player and book recommendation app. Listen to the perfect tune for the book you're reading!</p>
+                                <p class="small"><i>Collaborated with Bella Margiano, Asia Terrel, Gabrielle Horton</i></p>
+                                <div class="cardButtons">
+                                    <a href="https://www.figma.com/file/SBMjf4R074slz52uNcuFnl/Team-Margiano---BookTunes-Prototype?node-id=0%3A1&t=qYFT19TaCqXsDCa1-1" class="btn">Source</a>
+                                    <a href="../projects/booktunes.html" class="btn">More Info</a>
+                                </div>
+                                <div class="card-footer text-muted">
+                                    <i>April 29th, 2023</i>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="projectCard">
+                        <div class="card" href="#">
                             <img class="card-img-top" src="assets/teamflatearth.png" alt="Card image cap">
                             <div class="card-body">
                                 <h5 class="card-title">Airports of the World!</h5>
